# json_struct

./: .clang-format  .gitignore  CMakeLists.txt  COMPILING  Doxyfile  README  README.md  TODO  appveyor.yml  build.sh  conanfile.py  configure.ac  groups  project.config
.clusterfuzzlite/: Dockerfile  build.sh  reformat_fuzzer.cpp
.github/actions/docker-build-action/: action.yml
.github/workflows/: build_and_test_with_sanitizers.yml  cflite_pr.yml  codeql.yml  msvc.yml  scorecard.yml
docker/archlinux/: Dockerfile
docker/ubuntu/: Dockerfile
docker/ubuntu22.04/: Dockerfile  llvm.list
docs/: annotated.html  class_j_t_1_1_callback-members.html  class_j_t_1_1_callback.html  class_j_t_1_1_ref_counter-members.html  class_j_t_1_1_ref_counter.html  class_j_t_1_1_serializer-members.html  class_j_t_1_1_serializer.html  class_j_t_1_1_serializer_buffer-members.html  class_j_t_1_1_serializer_buffer.html  class_j_t_1_1_serializer_options-members.html  class_j_t_1_1_serializer_options.html  class_j_t_1_1_tokenizer-members.html  class_j_t_1_1_tokenizer.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  examples.html  files.html  functions.html  functions_func.html  globals.html  globals_defs.html  hierarchy.html  index.html  json__tools_8h.html  json__tools_8h_source.html  jt_struct.html  menudata.js  pages.html  simple_struct_8cpp-example.html  simple_tokenize_8cpp-example.html  struct_j_t_1_1_call_function_context-members.html  struct_j_t_1_1_call_function_context.html  struct_j_t_1_1_call_function_error_context-members.html  struct_j_t_1_1_call_function_error_context.html  struct_j_t_1_1_call_function_execution_state-members.html  struct_j_t_1_1_call_function_execution_state.html  struct_j_t_1_1_data_ref-members.html  struct_j_t_1_1_data_ref.html  struct_j_t_1_1_default_call_function_context-members.html  struct_j_t_1_1_default_call_function_context.html  (+43 more)
docs/search/: all_1.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  files_0.js  functions_0.js  pages_0.js  pages_1.js  searchdata.js
examples/: 01_simple_struct.cpp  03_optional_types.cpp  04_subclasses.cpp  05_enums.cpp  06_map.cpp  06_stdtypes.cpp  07_stdtypes.cpp  08_custom_types.cpp  09_nested_types.cpp  10_calling_functions.cpp  11_calling_functions.cpp  11_simple_diff.cpp  12_diff_missing_data.cpp  12_simple_diff.cpp  13_diff_missing_data.cpp  CMakeLists.txt  alias.cpp  custom_type.cpp  enums.cpp  nested_types.cpp  optional_types.cpp  reformat.cpp  simple_struct.cpp  simple_tokenize.cpp  stdtypes.cpp  subclasses.cpp
extractor/: CMakeLists.txt  astmatcher.h  astvisitor.cpp  astvisitor.h  command_line  command_line_vs  main.cpp
include/: json_struct.h  json_struct_diff.h  json_tokenizer.h  json_tools.h  json_tools.h.orig  json_tools_diff.h
include/extractor/: extractor_api.h
include/json_struct/: json_struct.h  json_struct_diff.h
jsonmod/: CMakeLists.txt  arg.cpp  arg.h  configuration.cpp  configuration.h  io.h  json_streamer.cpp  json_streamer.h  main.cpp  test-data.json
performance/: CMakeLists.txt  benchmark.cpp  generated.json.h  glaze_benchmark.cpp
src/: Makefile.am  json_tokenizer.cpp  json_tokenizer.h  json_tools-version.h.in  json_tree.cpp  json_tree.h
test_package/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  CMakeRC.cmake  Makefile.am  assert.h  compiler-test.cpp  generated.json  generated.json.h  json-copy-test.cpp  json-enum-test.cpp  json-function-error-test.cpp  json-function-external-test-new.cpp  json-function-external-test.cpp  json-function-test-new.cpp  json-function-test.cpp  json-functor-test.cpp  json-meta-test.cpp  json-mias-mat.cpp  json-nullable-test.cpp  json-optional.cpp  json-reformat.cpp  json-scope.cpp  json-string-with-nullterminator-test.cpp  json-struct-aliases-test.cpp  json-struct-array-varlength.cpp  json-struct-big-test.cpp  json-struct-diff.cpp  json-struct-error-string.cpp  json-struct-escape.cpp  json-struct-external.cpp  json-struct-fail.cpp  json-struct-float.cpp  json-struct-map-typehandler.cpp  json-struct-nested.cpp  json-struct-optimization-fixes.cpp  json-struct-optional.cpp  json-struct-performance.cpp  json-struct-polymorphic-map.cpp  json-struct-serialize-test.cpp  json-struct-serialize-tuple.cpp  json-struct-small-test.cpp  (+24 more)
tests/catch2/: catch.hpp
tests/extractor/: CMakeLists.txt  a.cpp  b.cpp
tests/include/json/0.6/: jsoncpp.cpp
tests/include/json/0.6/json/: json-forwards.h  json.h
