include_directories(${JSON_STRUCT_INCLUDE_DIR})

add_executable(simple_tokenize simple_tokenize.cpp)
add_executable(simple_struct simple_struct.cpp)
add_executable(optional_types optional_types.cpp)
add_executable(custom_type custom_type.cpp)
add_executable(nested_types nested_types.cpp)
add_executable(subclasses subclasses.cpp)
add_executable(stdtypes stdtypes.cpp)
add_executable(enums enums.cpp)
add_executable(calling_functions calling_functions.cpp)
add_executable(reformat reformat.cpp)
add_executable(alias alias.cpp)
