include_directories(${JSON_TOOLS_INCLUDE_DIR})

add_executable(json-tokenizer-fail-test json-tokenizer-fail-test.cpp)
add_executable(json-tokenizer-partial-test json-tokenizer-partial-test.cpp)
add_executable(json-tokenizer-test json-tokenizer-test.cpp)
add_executable(json-struct-test json-struct-test.cpp)
add_executable(json-struct-verify json-struct-verify.cpp)
add_executable(json-struct-serialize-tuple json-struct-serialize-tuple.cpp)
add_executable(json-function-test json-function-test.cpp)
add_executable(json-function-error-test json-function-error-test.cpp)
add_executable(json-copy-test json-copy-test.cpp)
add_executable(json-struct-serialize-test json-struct-serialize-test.cpp)
add_executable(members-size-test members-size-test.cpp)
add_executable(compiler-test compiler-test.cpp)
add_executable(meta-for-tokens meta-for-tokens.cpp)
add_executable(json-struct-big-test json-struct-big-test.cpp)
add_executable(json-struct-aliases-test json-struct-aliases-test.cpp)
add_executable(json-enum-test json-enum-test.cpp)
add_executable(json-meta-test json-meta-test.cpp)
add_executable(json-tools-performance json-tools-performance.cpp
                include/json/0.6/jsoncpp.cpp)
target_include_directories(json-tools-performance PRIVATE include/json/0.6)
add_test(NAME json-tokenizer-fail-test COMMAND json-tokenizer-fail-test)
add_test(NAME json-tokenizer-partial-test COMMAND json-tokenizer-partial-test)
add_test(NAME json-tokenizer-test COMMAND json-tokenizer-test)
add_test(NAME json-struct-test COMMAND json-struct-test)
add_test(NAME json-struct-verify COMMAND json-struct-verify)
add_test(NAME json-struct-serialize-tuple COMMAND json-struct-serialize-tuple)
add_test(NAME json-function-test COMMAND json-function-test)
add_test(NAME json-function-error-test COMMAND json-function-error-test)
add_test(NAME json-copy-test COMMAND json-copy-test)
add_test(NAME json-struct-serialize-test COMMAND json-struct-serialize-test)
add_test(NAME members-size-test COMMAND members-size-test)
add_test(NAME compiler-test COMMAND compiler-test)
add_test(NAME meta-for-tokens COMMAND meta-for-tokens)
add_test(NAME json-struct-big-test COMMAND json-struct-big-test)
add_test(NAME json-struct-aliases-test COMMAND json-struct-aliases-test)
add_test(NAME json-enum-test COMMAND json-enum-test)
add_test(NAME json-meta-test COMMAND json-meta-test)
add_test(NAME json-tools-performance COMMAND json-tools-performance)
